--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>Addison's Report Card Generator 1.0</h1>
+        <h1>Addison's Report Card Generator 1.1</h1>
+        <p class="instructions">Fill in the blanks with info. For proper formatting, the name should be capitalized; compliments and improvements can be short e.g "cartwheels" or a list e.g "cartwheels, front tucks, strength". 
+            Click generate once or multiple times until satisfied. Enjoy!
+        </p>
         <label for="nameInput">Enter student name:</label>
         <input type="text" id="nameInput" placeholder="Your Name">
         <label for="genderInput">Select level:</label>
