added more templates

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <option value="novice">Novice</option>
             <option value="intermediate">Intermediate</option>
         </select>
-        <label for="improvementInput">Enter something they could improve (e.g "cartwheels on balance"):</label>
+        <label for="improvementInput">Enter something they could improve (e.g "handstands by thinking about tucking your tummy"):</label>
         <input type="text" id="improvementInput" placeholder="Something to improve">
         <label for="complimentInput">Enter a compliment (e.g "keeping your feet glued when doing front rolls"):</label>
         <input type="text" id="complimentInput" placeholder="A compliment">
